fix: webforms && phrasing

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -83,7 +83,7 @@
     height: 78px;
     padding-left: 20px;
     border-radius: 4px;
-    background: #32323c;
+    background: #323232;
     color: #A0A0A0;
     font-family: Outfit;
     font-size: 20px;
@@ -94,7 +94,7 @@
     border: none;
     padding: 25px;
     border-radius: 4px;
-    background-image: #323232;
+    background: #323232;
     color: #A0A0A0;
     font-family: Outfit;
     font-size: 20px;
